syntax = "proto3";

option go_package = ".;community";

service UserService {
  rpc Register(RegisterRequest) returns (RegisterReply) {}
  rpc VerifyAccount(VerifyAccountRequest) returns (VerifyAccountReply) {}
  rpc Authenticate(AuthenticateRequest) returns (AuthenticateReply) {}
  rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenReply) {}
}

message RegisterRequest {
  string email = 1;
  string username = 2;
  string password = 3;
}

message RegisterReply {}

message VerifyAccountRequest {
  string code = 1;
}

message VerifyAccountReply {}

message AuthenticateRequest {
  string emailOrUsername = 1;
  string password = 2;
}

message AuthenticateReply { string token = 1; }

message VerifyTokenRequest { string token = 1; }

message VerifyTokenReply { uint32 user_id = 1; }